Refactoring and improvements for the release
1. Checking.java: moved model.utility → model.checks
   - Added overload: checkImageAndOutputOnNull(props, BufferedImage)
   - All controllers updated imports accordingly

2. SplitPdfHelper: new helper class
   - Split logic extracted from SplitPdfController into:
     splitByRange(), splitByPages(), splitSinglePage(), splitMultiplePagesToZip()
   - SplitPdfController.buildSplitTask() now delegates to SplitPdfHelper

3. Util: added static generateUniquePdfOutputFile()
   - Removed duplicate implementations from:
     MergePdfController, RemovePagesPdfController, SplitPdfController,
     ConvertImagesToPdfHelper
   - ConverterImagesToPdfController switched to Util.generateUniquePdfOutputFile()

4. ProtectPdfHelper: extracted getStandardProtectionPolicy() private method
   - Moved AccessPermission setup out of protectPdf()

5. CompressPdfHelper: compressPdf() return type File → void

6. ConverterPdfHelper: switch → switch expression in determinePageSize()

7. ConverterImage: switch → switch expression in getExtension()

8. IcoImageStrategy: manual setSize() replaced with @Setter (Lombok)

9. HomeViewController: added @FXML to onOpenCropImagePressed(),
   onOpenColorReplaceInImagePressed(), onOpenRemovePagesPdfPressed(),
   onOpenUnlockPdfPressed(), onOpenCompressPdfPressed(),
   onOpenMergePdfPressed(), onOpenSplitPdfPressed()

10. "Choice image" → "Select image" in file chooser dialogs:
    BlackWhiteImageController, BlurImageController, ColorReplaceImageController,
    ColorizeImageController, CropImageController, DarkenImageController,
    FindPixelImageController, LightenImageController, NegativeImageController,
    TurnImageController, CompressorImageController

11. "Choice PDF file" → "Select PDF" in:
    ConverterPdfToImageController, ProtectPdfController, UnlockPdfController

12. Removed null-guard on listControls.forEach() across all controllers:
    disableControls()/enableControls() no longer check `if (listContr